Closed Bug 402439 Opened 17 years ago Closed 17 years ago

Clipboard is emptied on application exit

Categories

(Core :: Widget: Win32, defect, P2)

x86
Windows 2000
defect

Tracking

()

VERIFIED FIXED

People

(Reporter: sgautherie, Assigned: emaijala+moz)

References

Details

(Keywords: dataloss, regression, relnote)

Attachments

(1 file)

Regressed between
[Mozilla/5.0 (Windows; U; Windows NT 5.0; en-US; rv:1.9a9pre) Gecko/2007103103 Minefield/3.0a9pre] (nightly) (W2Ksp4)
and
[Mozilla/5.0 (Windows; U; Windows NT 5.0; en-US; rv:1.9a9pre) Gecko/2007110103 Minefield/3.0a9pre] (nightly) (W2Ksp4)

Confirmed by
[Mozilla/5.0 (Windows; U; Windows NT 5.0; en-US; rv:1.9a9pre) Gecko/2007103102 SeaMonkey/2.0a1pre] (nightly) (W2Ksp4)
and
[Mozilla/5.0 (Windows; U; Windows NT 5.0; en-US; rv:1.9a9pre) Gecko/2007110103 SeaMonkey/2.0a1pre] (nightly) (W2Ksp4)

My steps:
1. Start browser application.
2. Load <about:>.
3. Copy the build id "line".
4. Paste it in another app: works :-)
5. Exit browser application.
6. Paste it in another app: no more data :-(

<http://bonsai.mozilla.org/cvsquery.cgi?treeid=default&module=MozillaTinderboxAll&branch=HEAD&branchtype=match&sortby=Date&hours=2&date=explicit&mindate=2007-10-31+03&maxdate=2007-11-01+04+&cvsroot=%2Fcvsroot>
My best guess would be bug 386286.
Flags: in-testsuite?
Flags: blocking1.9?
Keywords: dataloss
Blocking, but not blocking beta. Adding relnote ...
Flags: blocking1.9? → blocking1.9+
Keywords: relnote
Target Milestone: mozilla1.9 M9 → ---
Taking.
Assignee: nobody → emaijala
Attached patch PatchSplinter Review
This should fix it. The problem was that OleUninitialize was called before the observer in nsClipboard tried to call OleFlushClipboard. I removed the observed and moved OleFlushClipboard right before OleUninitialize. The comment changes are just removed CR's.
Attachment #287856 - Flags: review?(neil)
Status: NEW → ASSIGNED
And the CloseClipboard call in nsClipboard was superfluous.
(Had a look at MSDN for both functions: the fix looks perfect ;-))
Component: General → Widget: Win32
Comment on attachment 287856 [details] [diff] [review]
Patch

>+NS_IMPL_ISUPPORTS1(nsClipboard, nsBaseClipboard)

>+  NS_DECL_ISUPPORTS

You shouldn't need these, nsBaseClipboard already provides them.
(They were there before to resolve the ambiguous nsISupports cast.)
Attachment #287856 - Flags: review?(neil) → review+
Comment on attachment 287856 [details] [diff] [review]
Patch

Ok, I'll remove them before checking in.
Attachment #287856 - Flags: superreview?(roc)
Attachment #287856 - Flags: superreview?(roc) → superreview+
Attachment #287856 - Flags: approval1.9?
Priority: -- → P2
Attachment #287856 - Flags: approval1.9? → approval1.9+
Ere, jst-review takes exception to your patch as well.
http://beaufour.dk/jst-review/
(In reply to comment #8)
>Ere, jst-review takes exception to your patch as well.
>http://beaufour.dk/jst-review/
That's a bug in jst-review, not in the patch.
Not the complaint about Windows line endings...
?? The patch _removes_ a couple of Windows line endigns and I can't see jst-review complaining about that.
OK, nevermind me then :). Sorry for the spam.
Ere, think you could commit this soon? If you don't have time, just let me know, and I can check it in for you.
Fix checked in.
Status: ASSIGNED → RESOLVED
Closed: 17 years ago
Resolution: --- → FIXED
Keywords: checkin-needed
No longer depends on: 403724
Depends on: 403724
[Mozilla/5.0 (Windows; U; Windows NT 5.0; en-US; rv:1.9b2pre) Gecko/2007111403 SeaMonkey/2.0a1pre] (nightly) (W2Ksp4)

V.Fixed.
Status: RESOLVED → VERIFIED
FYI, this bug isn't listed in Beta 1 rel notes yet:
http://www.mozilla.com/en-US/firefox/3.0b1/releasenotes/
(In reply to comment #17)
> FYI, this bug isn't listed in Beta 1 rel notes yet:
> http://www.mozilla.com/en-US/firefox/3.0b1/releasenotes/

Is there still a reason to relnote something as this is fixed?

This may be a fixed bug but I see it every day.
(In reply to comment #19)
> This may be a fixed bug but I see it every day.

This bug was (reported) fixed 2 years ago.
Please file a new bug, with details.
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: