Fix for bug 402439 - Clipboard is emptied on application exit r=neil sr=roc a=mtschrep